fixed filter textbox overflow

--- a/v2.0/src/assets/css/extras.css
+++ b/v2.0/src/assets/css/extras.css
@@ -88,10 +88,11 @@
   max-height:265px !important;
 }
 .filter-search-input{
+  width:120%;
   padding:10px 25px !important; 
   border:solid 1px #eafff3; 
   border-radius:55px;
-  margin-left:-20px !important;
+  margin-left:-15px !important;
 }
 
 .home-events-img{
